ecmascript/parser/tests/test262-error-references/fail/95e67679ebbacf14.js.stderr
error: Unexpected token Some(Word(static))
 --> $DIR/tests/test262-parser/fail/95e67679ebbacf14.js:1:24
  |
1 | class A {static static static(){}}
  |                        ^^^^^^

